# seletiva-rc

./: README.md
Reinforcement/: requirements.txt  run.py
Reinforcement/agent/: __init__.py  base_agent.py  ddpg.py  dqn.py  q_learn.py  random.py
Reinforcement/utils/: __init__.py  replay_buffer.py
Simulation 2D/: .gitignore  README.md
Simulation 2D/robocup-soccer-simulator/: README.md
Simulation 2D/robocup-soccer-simulator/rcsslogplayer/classic/: rcsslogplay_classic
Simulation 2D/src/: bhv_basic_move.cpp  coach.conf  role_defensive_half.cpp  sample_field_evaluator.cpp  team_logo.xpm
Simulation-2D/: CMakeLists.txt  README.md  release.sh
Simulation-2D/binaries/: README.md
Simulation-2D/ferramentas/rcssserver/src/: SConscript
Simulation-2D/logs/rcssLogExtractor/: README.md
Simulation-2D/robocup-soccer-simulator/: Dockerfile  run.py
Simulation-2D/robocup-soccer-simulator/docker_16_04/: Dockerfile  README.md
Simulation-2D/src/: keepaway.sh  player.conf  role_center_back.cpp  role_center_forward.cpp  role_goalie.cpp  role_offensive_half.cpp  role_side_back.cpp  role_side_forward.cpp  role_side_half.cpp  start.sh  train.sh
Simulation-2D/src/chain_action/: tackle_generator.cpp
